# src/modules/accounts/data-contracts/current-user-response.ts
@@ -2,7 +2,7 @@ import { ApiProperty } from '@nestjs/swagger';
 import { BaseResponse } from '../../../shared/data-contracts/base-response';
 import { AuthenticatedUserInfo } from '../../auth/data-contracts/authenticated-user-info';
 
-export class CurrentUserResponse extends BaseResponse<AuthenticatedUserInfo> {
+export class CurrentUserResponse extends BaseResponse {
   @ApiProperty({ type: AuthenticatedUserInfo })
-  declare data?: AuthenticatedUserInfo;
+  user!: AuthenticatedUserInfo;
 }
