# src/modules/documents/data-contracts/upload-document-response.ts
@@ -2,7 +2,7 @@ import { ApiProperty } from '@nestjs/swagger';
 import { BaseResponse } from '../../../shared/data-contracts/base-response';
 import { DocumentSummary } from './document-summary';
 
-export class UploadDocumentResponse extends BaseResponse<DocumentSummary> {
+export class UploadDocumentResponse extends BaseResponse {
   @ApiProperty({ type: DocumentSummary })
-  declare data?: DocumentSummary;
+  document!: DocumentSummary;
 }
